--- a/src/main/resources/templates/sample.html
+++ b/src/main/resources/templates/sample.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <!-- Control -->
+    <!-- Info Panel -->
+
+    <!-- Control Panel -->
+
     <!-- The div to show the KakaoMap Object -->
     <div id="mapContainer" style="width: 100vw; height: 100vh; position: fixed; top: 0; left: 200px;"></div>
 </body>
